changed how to connect to oracle db and data entry apis
