# docs/apidoc.yaml
@@ -103,6 +103,316 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
+  /fishDataEntry:
+    get:
+      summary: List Fish Entries
+      operationId: GetFishEntries
+      tags:
+        - fishEntries
+      parameters:
+        - name: tableId
+          in: query
+          required: false
+          description: The table id
+          schema:
+            type: string
+        - name: fieldId
+          in: query
+          required: false
+          description: The field id
+          schema:
+            type: string
+        - name: orderby
+          in: query
+          required: false
+          description: The orderby
+          schema:
+            type: string
+        - name: page
+          in: query
+          required: false
+          description: The page
+          schema:
+            type: integer
+        - name: size
+          in: query
+          required: false
+          description: The size
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: Array of fishDataEntries
+          headers:
+            x-next:
+              description: A link to the next page of responses
+              schema:
+                type: string
+          content:
+            application/json:    
+              schema:
+                $ref: "#/components/schemas/uploadFish"
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+                /upload:
+    post:
+      tags:
+      - "saveFishEntries"
+      summary: "Create Fish Entries"
+      description: ""
+      operationId: "saveFishEntries"
+      requestBody:
+        description: "object of fish entries"
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/uploadFish"
+      responses:
+        '201':
+          description: Null response
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error" 
+    put:
+      tags:
+      - "updateFishEntries"
+      summary: "Update Fish Entries"
+      description: ""
+      operationId: "updateFishEntries"
+      requestBody:
+        description: "object of fish entries"
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/uploadFish"
+      responses:
+        '201':
+          description: Null response
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error" 
+  /moriverDataEntry:
+    get:
+      summary: List Moriver Entries
+      operationId: GetMoriverEntries
+      tags:
+        - moriverEntries
+      parameters:
+        - name: tableId
+          in: query
+          required: false
+          description: The table id
+          schema:
+            type: string
+        - name: fieldId
+          in: query
+          required: false
+          description: The field id
+          schema:
+            type: string
+        - name: orderby
+          in: query
+          required: false
+          description: The orderby
+          schema:
+            type: string
+        - name: page
+          in: query
+          required: false
+          description: The page
+          schema:
+            type: integer
+        - name: size
+          in: query
+          required: false
+          description: The size
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: Array of moriverDataEntries
+          headers:
+            x-next:
+              description: A link to the next page of responses
+              schema:
+                type: string
+          content:
+            application/json:    
+              schema:
+                $ref: "#/components/schemas/uploadMoriver"
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+    post:
+      tags:
+      - "saveMoriverEntries"
+      summary: "Create Moriver Entries"
+      description: ""
+      operationId: "saveMoriverEntries"
+      requestBody:
+        description: "object of moriver entries"
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/uploadMoriver"
+      responses:
+        '201':
+          description: Null response
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error" 
+    put:
+      tags:
+      - "updateMoriverEntries"
+      summary: "Update Moriver Entries"
+      description: ""
+      operationId: "updateMoriverEntries"
+      requestBody:
+        description: "object of moriver entries"
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/uploadMoriver"
+      responses:
+        '201':
+          description: Null response
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error" 
+  /supplementalDataEntry:
+    get:
+      summary: List Supplemental Entries
+      operationId: GetSupplementalEntries
+      tags:
+        - supplementalEntries
+      parameters:
+        - name: tableId
+          in: query
+          required: false
+          description: The table id
+          schema:
+            type: string
+        - name: fieldId
+          in: query
+          required: false
+          description: The field id
+          schema:
+            type: string
+        - name: geneticsVial
+          in: query
+          required: false
+          description: The field id
+          schema:
+            type: string
+        - name: pitTag
+          in: query
+          required: false
+          description: The field id
+          schema:
+            type: string
+        - name: orderby
+          in: query
+          required: false
+          description: The orderby
+          schema:
+            type: string
+        - name: page
+          in: query
+          required: false
+          description: The page
+          schema:
+            type: integer
+        - name: size
+          in: query
+          required: false
+          description: The size
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: Array of supplementalDataEntries
+          headers:
+            x-next:
+              description: A link to the next page of responses
+              schema:
+                type: string
+          content:
+            application/json:    
+              schema:
+                $ref: "#/components/schemas/uploadSupplemental"
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+    post:
+      tags:
+      - "saveSupplementalEntries"
+      summary: "Create Supplemental Entries"
+      description: ""
+      operationId: "saveSupplementalEntries"
+      requestBody:
+        description: "object of supplemental entries"
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/uploadSupplemental"
+      responses:
+        '201':
+          description: Null response
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error" 
+    put:
+      tags:
+      - "updateSupplementalEntries"
+      summary: "Update Supplemental Entries"
+      description: ""
+      operationId: "updateSupplementalEntries"
+      requestBody:
+        description: "object of supplemental entries"
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/uploadSupplemental"
+      responses:
+        '201':
+          description: Null response
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
   /fishDataSummary:
     get:
       summary: List Fish Summaries
@@ -840,6 +1150,55 @@ components:
           type: string
         conductivity:
           type: string
+    fishDataEntry:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int32
+        mrId:
+          type: integer
+          format: int32
+        panelhook:
+          type: string
+          maxLength: 5
+        bait:
+          type: string
+          maxLength: 1
+        species:
+          type: string
+          maxLength: 4
+        length:
+          type: number
+        weight:
+          type: number
+        fishcount:
+          type: integer
+          format: int32
+        finCurl:
+          type: string
+          maxLength: 1
+        otolith:
+          type: string
+          maxLength: 1
+        rayspine:
+          type: string
+          maxLength: 1
+        scale:
+          type: string
+          maxLength: 1
+        ftprefix:
+          type: string
+          maxLength: 3
+        ftnum:
+          type: string
+          maxLength: 7
+        ftmr:
+          type: string
+          maxLength: 1
+        uniqueID:
+          type: integer
+          format: int32
     upload:
       type: object
       properties:
